--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <!---- navigation bar-->
-      <a href="#" class="logo">MY Portfolio</a>
+      <a href="#" class="logo">Portfolio.</a>
       <div class="bx bx-menu" id="menu-icon"></div>
       <ul class="navbar">
         <li><a href="#">Home</a></li>
@@ -47,10 +47,7 @@
         <h1>Amit Yadav</h1>
         <h2>Fullstack Web Developer</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
-          molestiae unde tempora quia placeat vel dolor expedita tenetur
-          laudantium ex impedit quidem excepturi id. Qui enim quaerat mollitia!
-          Necessitatibus, eius!
+          I am a Front-End / Full-Stack Developer. I'm currently working on my portfolio and learning new skills. I'm looking for a job as a web developer. I'm also looking for a mentor to help me grow as a developer.
         </p>
         <a href="#" class="btn">Contact me</a>
       </div>
@@ -68,10 +65,7 @@
         </div>
         <div class="about-text">
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
-            repudiandae dolorem, ipsa, numquam voluptate illo, hic cum soluta
-            magni nulla ad eius aut debitis adipisci porro vel placeat esse
-            nemo!
+            I'm a self-taught web developer  with experience in designing new features from ideation to production, implementation of wireframes and design flows into high performance web applications. I take into consideration the user experience while writing reusable and efficient code. I passionately combine good design, technology, and innovation in all my projects, which I like to accompany from the first idea to release.Currently, I'm focused on the backend development.
           </p>
           <div class="information">
             <!--BOX I-->
@@ -222,12 +216,13 @@
  </section>
  <!---- footer section-->
  <div class="footer">
-  <h2>My Portfolio</h2>
+  <h2>Connect with me</h2>
   <div class="footer-social">
     <a href="#"><i class="bx bxl-facebook"></i></a>
     <a href="#"><i class="bx bxl-twitter"></i></a>
     <a href="#"><i class="bx bxl-instagram"></i></a>
     <a href="#"><i class="bx bxl-youtube"></i></a>
+    <a href="#"><i class="bx bxl-github"></i></a>
   </div>
  </div>
  <!--- copyright-->
