--- a/index.html
+++ b/index.html
@@ -233,14 +233,19 @@
   </div>
   <div class="portfolio-content">
     <div class="portfolio-img">
-     <a href="#"><img src="/images/project1.png" alt=""></a>
-     <h5>drum kitt</h5> 
+     <a href="#"><img src="./images/project1.png" alt="">
+      <h5>drum kitt</h5> 
+    </a>
+     
     </div>
     <div class="portfolio-img">
-     <a href="https://amityadavvns.github.io/Calculator-project/"> <img src="./images/project2.png" alt=""></a>
+     <a href="https://amityadavvns.github.io/Calculator-project/"> <img src="./images/img2.jpeg" alt="">
+      <h5>Calculator</h5>
+    </a>
     </div>
     <div class="portfolio-img">
-      <img src="./images/blog-3.jpg" alt="">
+      <img src="./images/img3.gif" alt="">
+      <h5>To-Do app</h5>
     </div>
     <div class="portfolio-img">
       <img src="./images/blog-4.jpg" alt="">
@@ -258,6 +263,7 @@
   </div>
   
  </section>
+
  <!--   contactt form   -->
  <section class="contact" id="contact">
   <div class="heading">
