Added my project

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <div class="project-layer">
                   <h4>Drum kit</h4>
                   <p>"Drum kit press given key "</p>
-                  <a href="https://abhishekmaurya149.github.io/e-commerce-web/" target="_blank"><i class='bx bx-link-external' ></i></a>
+                  <a href="#" target="_blank"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>            
           <div class="project-box">
@@ -297,7 +297,7 @@
             <div class="project-layer">
                 <h4>To do app</h4>
                 <p>its a multiple feature ToDo app.</p>
-                <a href="https://github.com/Abhisheksir31/Age-Calculator" target="_blank"><i class='bx bx-link-external' ></i></a>
+                <a href="https://amityadavvns.github.io/codeSoft/" target="_blank"><i class='bx bx-link-external' ></i></a>
             </div>
         </div>
       </div>
