Added my projecvt

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <img src="images/to-do.gif" alt="">
             <div class="project-layer">
                 <h4>To do app</h4>
-                <p>its a multiple feature ToDo app.</p>
+                <p>its a multiple feature ToDo app</p>
                 <a href="https://amityadavvns.github.io/codeSoft/" target="_blank"><i class='bx bx-link-external' ></i></a>
             </div>
         </div>
